syntax = "proto3";

package transaction_detail;

option go_package = "internal/delivery/grpc/pb;pb";
import "google/protobuf/timestamp.proto";

message TransactionDetail{
    string id = 1;
    string transaction_id = 2;
    string food_id = 3;
    int64 price = 4;
    int64 qty = 5;
    int64 total = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message TransactionDetailListResponse {
    repeated TransactionDetail transaction_details = 1;
}

message CreateTransactionDetailReqeuest {
    string transaction_id = 1;
    string food_id = 2;
    int64 price = 3;
    int64 qty = 4;
    int64 total = 5;
}

message UpdateTransactionDetailReqeuest {
    string id = 1;
    string transaction_id = 2;
    string food_id = 3;
    int64 price = 4;
    int64 qty = 5;
    int64 total = 6;
}

message DeleteTransactionDetailRequest {
    string id = 1;
}

message DeleteTransactionDetailResponse {
    string message = 1;
}

message TransactionDetailResponse {
    TransactionDetail TransactionDetail = 1;
}

message GetByIdTransactionDetailReqeuest {
    string id = 1;
}

message EmptyTransactionDetail {}

service TransactionDetailService {
    rpc CreateTransactionDetail(CreateTransactionDetailReqeuest) returns (TransactionDetailResponse);
    rpc GetAllTransactionDetail(EmptyTransactionDetail) returns (TransactionDetailResponse);
    rpc GetByIdTransactionDetail(GetByIdTransactionDetailReqeuest) returns (TransactionDetailResponse);
    rpc UpdateTransactionDetail(UpdateTransactionDetailReqeuest) returns (TransactionDetailResponse);
    rpc DeleteTransactionDetail(DeleteTransactionDetailRequest) returns (DeleteTransactionDetailResponse);
}